cache集成
(cherry picked from commit 479c834eb48293bbebf0a5589287183f60cb0317)
(cherry picked from commit 5b936d9b1fe1bc6b1ba0b23e21fae6de949ff027)